1.x.x
------------------
CHANGES:
- Timesheet class is now an Innowork Item. (Alex Pagnoni)



1.1.0 - 2014/01/07 
------------------
NEW FEATURES:
- Added dashboard widget with personal timesheet summary. (Alex Pagnoni)
- Added log work form. (Alex Pagnoni)
- Added user timesheet monthly calendar view. (Alex Pagnoni)



1.0.0 - 2014/01/06
------------------
- First release.