@@ -1,7 +1,12 @@
 1.x.x
 ------------------
+NEW FEATURES:
+- Added timesheet data entry inside tasks details box. (Alex Pagnoni)
+- Added task timesheet totals inside tasks details box. (Alex Pagnoni)
+ 
 CHANGES:
 - Timesheet class is now an Innowork Item. (Alex Pagnoni)
+- Changed minimum Innomatic version to 6.3.0. (Alex Pagnoni)
 
 
 
